--- a/COCOMO/COCOMO.csproj
+++ b/COCOMO/COCOMO.csproj
@@ -58,6 +58,12 @@
     <Compile Include="BasicLvl.Designer.cs">
       <DependentUpon>BasicLvl.cs</DependentUpon>
     </Compile>
+    <Compile Include="PoluNezMetod.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PoluNezMetod.Designer.cs">
+      <DependentUpon>PoluNezMetod.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RasprMetod.cs">
@@ -71,6 +77,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="BasicLvl.resx">
       <DependentUpon>BasicLvl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PoluNezMetod.resx">
+      <DependentUpon>PoluNezMetod.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
