--- a/COCOMO/COCOMO.csproj
+++ b/COCOMO/COCOMO.csproj
@@ -65,6 +65,12 @@
       <DependentUpon>PoluNezMetod.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
+    <Compile Include="promezh.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="promezh.Designer.cs">
+      <DependentUpon>promezh.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -91,6 +97,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PoluNezMetod.resx">
       <DependentUpon>PoluNezMetod.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="promezh.resx">
+      <DependentUpon>promezh.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
