--- a/COCOMO/COCOMO.csproj
+++ b/COCOMO/COCOMO.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="cocomo2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="cocomo2.Designer.cs">
+      <DependentUpon>cocomo2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +95,9 @@
     <Compile Include="VstroenMetod.Designer.cs">
       <DependentUpon>VstroenMetod.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="cocomo2.resx">
+      <DependentUpon>cocomo2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
     </EmbeddedResource>
